--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "next": "16.0.7",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-to-print": "^3.2.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
